[int] Updated gitignore and readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
-# Visual Studio 2015 user specific files
+# Visual Studio user specific files
 .vs/
+.vsconfig
+UpgradeLog.htm
+
+# Rider user specific files
+.idea/
+*.DotSettings.user
+
+# Ignore RiderLink Plugin since it's automatically reinstalled by JetBrains Rider.
+Plugins/Developer/RiderLink/
 
 # Compiled Object files
 *.slo
@@ -40,7 +49,6 @@
 *.sdf
 *.VC.db
 *.VC.opendb
-.vsconfig
 
 # Precompiled Assets
 SourceArt/**/*.png
@@ -48,7 +56,7 @@ SourceArt/**/*.tga
 
 # Binary Files
 Binaries/*
-Plugins/**/Binaries/*
+Plugins/*/Binaries/*
 
 # Builds
 Build/*
@@ -69,7 +77,8 @@ Saved/*
 
 # Compiled source files for the engine to use
 Intermediate/*
-Plugins/**/Intermediate/*
+Plugins/*/Intermediate/*
+Plugins/*/RiderLink/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
