--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,11 @@
 
+
 [/Script/CommonUI.CommonUISettings]
 CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2687C4D64A9C164C765125B5089F0D1C
+
+[/Script/FrontendUI.FrontendDeveloperSettings]
+FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"))
+
