--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,5 +7,5 @@ CommonButtonAcceptKeyHandling=TriggerClick
 ProjectID=2687C4D64A9C164C765125B5089F0D1C
 
 [/Script/FrontendUI.FrontendDeveloperSettings]
-FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"))
+FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenu"), "/Game/Blueprints/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"))
 
