43. BP Push Confirm Screen To Modal Stack

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ CommonButtonAcceptKeyHandling=TriggerClick
 ProjectID=2687C4D64A9C164C765125B5089F0D1C
 
 [/Script/FrontendUI.FrontendDeveloperSettings]
-FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenu"), "/Game/Blueprints/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"))
+FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenu"), "/Game/Blueprints/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"),((TagName="Frontend.Widget.Confirm"), "/Game/Blueprints/UI/Widgets/WBP_CAW_ConfirmScreen.WBP_CAW_ConfirmScreen_C"))
 
 [/Script/CommonInput.CommonInputSettings]
 InputData=/Game/Blueprints/UI/CommonInputData/InputData_Default.InputData_Default_C
