[int] enabled Enhanced Input

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,6 +12,7 @@ PrimaryLayoutClass=/Script/UMG.WidgetBlueprintGeneratedClass'/Game/Blueprints/UI
 
 [/Script/CommonInput.CommonInputSettings]
 InputData=/Game/Blueprints/UI/CommonInputData/InputData_Default.InputData_Default_C
+bEnableEnhancedInputSupport=True
 
 [CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
 DefaultInputType=MouseAndKeyboard
