--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,6 +9,7 @@ ProjectID=2687C4D64A9C164C765125B5089F0D1C
 [/Script/FrontendUI.FrontendDeveloperSettings]
 FrontendWidgetMap=(((TagName="Frontend.Widget.PressAnyKey"), "/Game/Blueprints/UI/Widgets/WBP_CAW_PressAnyKey.WBP_CAW_PressAnyKey_C"),((TagName="Frontend.Widget.MainMenu"), "/Game/Blueprints/UI/Widgets/WBP_CAW_MainMenu.WBP_CAW_MainMenu_C"),((TagName="Frontend.Widget.Confirm"), "/Game/Blueprints/UI/Widgets/WBP_CAW_ConfirmScreen.WBP_CAW_ConfirmScreen_C"),((TagName="Frontend.Widget.StoryScreen"), "/Game/Blueprints/UI/Widgets/WBP_CAW_StoryScreen.WBP_CAW_StoryScreen_C"),((TagName="Frontend.Widget.Options"), "/Game/Blueprints/UI/Widgets/WBP_CAW_OptionsScreen.WBP_CAW_OptionsScreen_C"))
 PrimaryLayoutClass=/Script/UMG.WidgetBlueprintGeneratedClass'/Game/Blueprints/UI/WBP_CUW_PrimaryLayout.WBP_CUW_PrimaryLayout_C'
+OptionsScreenSoftImageMap=(((TagName="Options.Image.Gameplay.TestImage"), "/Fab/Placeholders/FabLogo.FabLogo"))
 
 [/Script/CommonInput.CommonInputSettings]
 InputData=/Game/Blueprints/UI/CommonInputData/InputData_Default.InputData_Default_C
